<resources>
    <string name="app_name">UnivGo</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="username">username</string>
    <string name="putain_merde">putain merde</string>
    <string name="drawer_open">Ouvrir</string>
    <string name="drawer_close">Fermer</string>
    <string name="identifiant_ou_mot_de_passe_erron_veuillez_ressayer"><u>Identifiant ou mot de passe erroné. Veuillez ressayer.</u></string>
    <string name="applogo">applogo</string>
    <string name="identifiant">Identifiant</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="cr_er_un_compte"><u>Créer un compte</u></string>
    <string name="cr_er_un_compte2">Créer un compte</string>
    <string name="facebookloginicon">facebookloginicon</string>
    <string name="twitterloginicon">twitterloginicon</string>
    <string name="googleloginicon">googleloginicon</string>
    <string name="se_connecter">Se connecter</string>
    <string name="nouveau_utilisateur">Nouveau utilisateur</string>
    <!--    <string name="identifiant">Identifiant</string>-->
    <string name="logo_register">logo_register</string>
    <!--    <string name="mot_de_passe">Mot de passe</string>-->
    <string name="confirmez_mot_de_passe">Confirmez mot de passe</string>
    <string name="nom_complet">Nom complet</string>
    <string name="pays">Pays</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="publier">Publier</string>
    <string name="quoi_tu_penses">À quoi tu penses ?</string>
    <string name="post_picture">post picture</string>
    <string name="for_user_to_write_a_description_of_the_post">For user to write a description of the post</string>
    <string name="description_de_la_publication">Description de la publication</string>
    <string name="editer_la_publication">Editer la publication</string>
    <string name="supprimer_la_publication">Supprimer la publication</string>
    <string name="la_description_de_la_publication">La description de la publication</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="a_post">A posté</string>
    <string name="nom_prenom">nom prenom</string>
    <string name="nom_profil">Nom Profil</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="gender">Gender</string>
    <string name="relation">Relation</string>
    <string name="trouvez_vos_amis_et_famille">Trouvez vos amis et famille</string>
    <string name="tapez_ici_le_nom_de_la_personne_que_vous_cherchez">Tapez ici le nom de la personne que vous cherchez</string>
    <string name="searchbutton">searchbutton</string>
    <string name="nom_utilisateur">Nom utilisateur</string>
    <string name="statut">Statut</string>
    <!--    <string name="cr_er_un_compte">Créer un compte</string>-->
</resources>
