<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".ClickPostActivity">

    <ImageView
        android:id="@+id/click_post_image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_above="@+id/click_post_description"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="53dp"
        android:contentDescription="@string/post_picture"
        app:srcCompat="@drawable/select_image" />

    <TextView
        android:id="@+id/click_post_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delete_post_button"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="161dp"
        android:background="@drawable/inputs"
        android:padding="15dp"
        android:text="@string/description_de_la_publication"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/edit_post_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delete_post_button"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:text="@string/editer_la_publication"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/delete_post_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:text="@string/supprimer_la_publication"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>