<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorProfile"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/my_profile_pic"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="55dp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="55dp"
                android:layout_marginRight="55dp"
                android:src="@drawable/profile">

            </de.hdodenhof.circleimageview.CircleImageView>

            <TextView
                android:id="@+id/my_profile_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom_profil"
                android:layout_below="@+id/my_profile_pic"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/my_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/identifiant"
                android:layout_below="@+id/my_profile_full_name"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"
                android:textSize="18sp">

            </TextView>

            <TextView
                android:id="@+id/my_profile_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statut"
                android:layout_below="@+id/my_username"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"
                android:textSize="22sp">

            </TextView>

            <TextView
                android:id="@+id/my_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pays"
                android:layout_below="@+id/my_profile_status"
                android:layout_marginTop="60dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"
                android:textSize="18sp">

            </TextView>

            <TextView
                android:id="@+id/my_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dd_mm_yyyy"
                android:layout_below="@+id/my_country"
                android:layout_marginTop="60dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"
                android:textSize="18sp">

            </TextView>

            <TextView
                android:id="@+id/my_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_below="@+id/my_dob"
                android:layout_marginTop="60dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"
                android:textSize="18sp">

            </TextView>

            <TextView
                android:id="@+id/my_relationship_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_gender"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="50dp"
                android:gravity="center_horizontal"
                android:text="@string/relation"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp">

            </TextView>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>