<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".PostActivity">

    <include
        android:id="@+id/update_post_page_toolbar"
        layout="@layout/app_bar_layout"/>

    <ImageButton
        android:id="@+id/select_post_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_above="@+id/click_post_description"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/post_picture"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/select_image" />

    <EditText
        android:id="@+id/click_post_description"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/update_post_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/quoi_tu_penses"
        android:inputType="textMultiLine"
        android:padding="15dp" />

    <Button
        android:id="@+id/update_post_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/button"
        android:padding="10dp"
        android:text="@string/publier"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
</RelativeLayout>