<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/login">

    <EditText
        android:id="@+id/register_email"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_above="@+id/register_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/email"
        android:ems="10"
        android:hint="@string/identifiant"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:autofillHints=""
        android:drawableStart="@drawable/email" />

    <ImageView
        android:id="@+id/register_icon"
        android:layout_width="wrap_content"
        android:layout_height="187dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:contentDescription="@string/logo_register"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_above="@+id/register_confirm_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:padding="10dp"
        android:autofillHints=""
        android:drawableStart="@drawable/password" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_above="@+id/register_create_account"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/confirmez_mot_de_passe"
        android:inputType="textPassword"
        android:padding="10dp"
        android:autofillHints=""
        android:drawableStart="@drawable/password" />

    <Button
        android:id="@+id/register_create_account"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/button"
        android:padding="15dp"
        android:text="@string/cr_er_un_compte2"
        android:textAllCaps="false"
        android:textColor="@color/cardview_light_background"
        android:textSize="16sp" />
</RelativeLayout>